astrid/src/astrid.h

#define ASTRID_CHANNELS 2
#define ASTRID_SAMPLERATE 48000
#define NOTE_ON 144
#define NOTE_OFF 128
#define CONTROL_CHANGE 176
#define LPADCBUFSAMPLES (LPADCBUFFRAMES * ASTRID_CHANNELS)
#define LPADC_BUFFER_PATH "/astrid-adc-buffer"
typedef struct lpmsgpq_node_t {
    double timestamp;
    lpmsg_t msg;
    size_t pos;
    int index; /* index in node pool */
} lpmsgpq_node_t;
/* When instrument scripts produce MIDI triggers, 
 * they schedule them (with the onset value, which 
 * is relative to *now*) by sending this struct over 
 * the MIDI trigger fifo. */
// FIXME these can probably just be normal lpmsg_t messages...?
typedef struct lpmidievent_t {
    double onset;
    double now;
    double length;
    char type;
    char note;
    char velocity;
    char program;
    char bank_msb;
    char bank_lsb;
    char channel;
} lpmidievent_t;
/* These events are what is stored in the 
 * scheduler's linked lists where it tracks 
 * which buffers are queued, playing, and 
 * completed, and which have pending callbacks.
 * */
typedef struct lpevent_t {
    size_t id;
    lpbuffer_t * buf;
    size_t pos;
    size_t onset;
    void * next;
    void (*callback)(lpmsg_t msg);
    lpmsg_t msg;
    size_t callback_onset;
    int callback_fired;
} lpevent_t;
typedef struct lpscheduler_t {
    lpfloat_t * current_frame;
    int channels;
    int realtime;
    lpfloat_t samplerate;
    struct timespec * init;
    struct timespec * now;
    size_t ticks;
    size_t tick_ns;
    size_t event_count;
    size_t numzeros;
    lpfloat_t last_sum;
    lpevent_t * waiting_queue_head;
    lpevent_t * playing_stack_head;
    lpevent_t * nursery_head;
} lpscheduler_t;
typedef struct lpinstrument_t {
    const char * name;
    int channels;
    volatile int is_running;
    volatile int is_waiting;
    int has_been_initialized;
    lpfloat_t samplerate;

    // LMDB session refs
    MDB_cursor * dbcur;
    MDB_env * dbenv;
    MDB_dbi dbi;
    MDB_txn * dbtxn_read;
    MDB_txn * dbtxn_write;

    // the XDG config dir where LMDB sessions live
    char datapath[PATH_MAX]; 

    // The adc ringbuf name
    char adc_name[PATH_MAX];

    // The instrument message q(s)
    char qname[NAME_MAX]; 
    char external_relay_name[NAME_MAX]; // just python, really 
    mqd_t msgq;
    mqd_t exmsgq;
    lpmsg_t msg;
    lpmsg_t cmd;

    // Message scheduling pq nodes
    pqueue_t * msgpq;
    lpmsgpq_node_t * pqnodes;

    // Thread refs
    pthread_t message_feed_thread;
    pthread_t message_scheduler_pq_thread;
    lpscheduler_t * async_mixer;
    lpbuffer_t * lastbuf;

    // Jack refs
    jack_port_t ** inports;
    jack_port_t ** outports;
    jack_client_t * jack_client;

    // Optional local context struct for callbacks
    void * context;

    // Param update callback
    void (*updates)(void * instrument);

    // Async renderer callback (C-compat only)
    lpbuffer_t * (*renderer)(void * instrument);

    // Stream callback
    void (*stream)(size_t blocksize, float ** input, float ** output, void * instrument);

    // Shutdown signal handler (SIGTERM & SIGKILL)
    void (*shutdown)(int sig);
} lpinstrument_t;
void scheduler_schedule_event(lpscheduler_t * s, lpbuffer_t * buf, size_t delay);
int lpscheduler_get_now_seconds(double * now);
void scheduler_cleanup_nursery(lpscheduler_t * s);
 
lpbuffer_t * deserialize_buffer(char * str, lpmsg_t * msg);
ssize_t astrid_get_voice_id();
int send_message(char * qname, lpmsg_t msg);
int send_serial_message(lpmsg_t msg, char * tty);
int send_play_message(lpmsg_t msg);
mqd_t astrid_msgq_open(char * qname);
int astrid_msgq_close(mqd_t mqd);
int astrid_msgq_read(mqd_t mqd, lpmsg_t * msg);
/* TODO add POSIX message queues for these too */
int midi_triggerq_open();
int midi_triggerq_schedule(int qfd, lpmidievent_t t);
int midi_triggerq_close(int qfd);
int lpmidi_setcc(int device_id, int cc, int value);
int lpmidi_getcc(int device_id, int cc);
int lpmidi_setnote(int device_id, int note, int velocity);
int lpmidi_getnote(int device_id, int note);
int lpserial_getctl(int device_id, int ctl, lpfloat_t * value);
int lpsampler_read_block_of_samples(char * name, size_t offset, size_t size, lpfloat_t * out);
 
int lpipc_getid(char * path);
lpinstrument_t * astrid_instrument_start(const char * name, int channels, double adc_length, void * ctx, void (*stream)(size_t blocksize, float ** input, float ** output, void * instrument), lpbuffer_t * (*renderer)(void * instrument), void (*updates)(void * instrument));
int astrid_instrument_stop(lpinstrument_t * instrument);
int astrid_instrument_publish_bufstr(char * instrument_name, unsigned char * bufstr, size_t size);
int astrid_instrument_console_readline(char * instrument_name);
int relay_message_to_seq(lpinstrument_t * instrument);