libpippi/src/pippicore.h

typedef float lpfloat_t;
typedef double lpfloat_t;
/* Core datatypes */
typedef struct lpbuffer_t {
    lpfloat_t * data;
    size_t length;
    int samplerate;
    int channels;

    /* used for different types of playback */
    lpfloat_t phase;
    size_t boundry;
    size_t range;
    size_t pos;
    size_t onset;
    int is_looping;
} lpbuffer_t;
typedef struct lpstack_t {
    lpbuffer_t ** stack;
    size_t length;
    lpfloat_t phase; /* Pos within table */
    lpfloat_t pos; /* Pos within stack */
    int read_index;
} lpstack_t;
typedef struct lpbuffer_factory_t {
    lpbuffer_t * (*create)(size_t, int, int);
    lpbuffer_t * (*create_from_float)(lpfloat_t value, size_t length, int channels, int samplerate);
    lpbuffer_t * (*create_from_bytes)(char * bytes, size_t length, int channels, int samplerate);
    lpstack_t * (*create_stack)(int, size_t, int, int);
    void (*copy)(lpbuffer_t *, lpbuffer_t *);
    void (*clear)(lpbuffer_t *);
    void (*split2)(lpbuffer_t *, lpbuffer_t *, lpbuffer_t *);
    void (*scale)(lpbuffer_t *, lpfloat_t, lpfloat_t, lpfloat_t, lpfloat_t);
    lpfloat_t (*min)(lpbuffer_t * buf);
    lpfloat_t (*max)(lpbuffer_t * buf);
    lpfloat_t (*mag)(lpbuffer_t * buf);
    lpfloat_t (*play)(lpbuffer_t *, lpfloat_t);
    void (*pan)(lpbuffer_t * buf, lpbuffer_t * pos, int method);
    lpbuffer_t * (*mix)(lpbuffer_t *, lpbuffer_t *);
    lpbuffer_t * (*remix)(lpbuffer_t *, int);
    void (*clip)(lpbuffer_t * buf, lpfloat_t minval, lpfloat_t maxval);
    lpbuffer_t * (*cut)(lpbuffer_t * buf, size_t start, size_t length);
    void (*cut_into)(lpbuffer_t * buf, lpbuffer_t * out, size_t start, size_t length);
    lpbuffer_t * (*varispeed)(lpbuffer_t * buf, lpbuffer_t * speed);
    lpbuffer_t * (*resample)(lpbuffer_t *, size_t);
    void (*multiply)(lpbuffer_t *, lpbuffer_t *);
    void (*multiply_scalar)(lpbuffer_t *, lpfloat_t);
    void (*add)(lpbuffer_t *, lpbuffer_t *);
    void (*add_scalar)(lpbuffer_t *, lpfloat_t);
    void (*subtract)(lpbuffer_t *, lpbuffer_t *);
    void (*subtract_scalar)(lpbuffer_t *, lpfloat_t);
    void (*divide)(lpbuffer_t *, lpbuffer_t *);
    void (*divide_scalar)(lpbuffer_t *, lpfloat_t);
    lpbuffer_t * (*concat)(lpbuffer_t *, lpbuffer_t *);
    int (*buffers_are_equal)(lpbuffer_t *, lpbuffer_t *);
    int (*buffers_are_close)(lpbuffer_t *, lpbuffer_t *, int);
    void (*dub)(lpbuffer_t *, lpbuffer_t *, size_t);
    void (*dub_scalar)(lpbuffer_t *, lpfloat_t, size_t);
    void (*env)(lpbuffer_t *, lpbuffer_t *);
    lpbuffer_t * (*pad)(lpbuffer_t * buf, size_t before, size_t after);
    void (*taper)(lpbuffer_t * buf, size_t start, size_t end);
    lpbuffer_t * (*trim)(lpbuffer_t * buf, size_t start, size_t end, lpfloat_t threshold, int window);
    lpbuffer_t * (*fill)(lpbuffer_t * src, size_t length);
    lpbuffer_t * (*repeat)(lpbuffer_t * src, size_t repeats);
    lpbuffer_t * (*reverse)(lpbuffer_t * buf);
    lpbuffer_t * (*resize)(lpbuffer_t *, size_t);
    void (*plot)(lpbuffer_t * buf);
    void (*destroy)(lpbuffer_t *);
    void (*destroy_stack)(lpstack_t *);
} lpbuffer_factory_t;
extern const lpbuffer_factory_t LPBuffer;